# carleson

./: .gitignore  CONTRIBUTING.md  README.md
.astrolabe/: graph.json  meta.json
.github/workflows/: push.yml  push_pr.yml
docs/: index.md
docs/_layouts/: default.html
visualization/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo  vitest.config.ts
visualization/.github/workflows/: release.yml
visualization/assets/: index.ts  types.ts
visualization/assets/edges/: Dashed.tsx  (+7 more)
visualization/backend/: README.md  astrolabe-server.spec  pyproject.toml  run_server.py
visualization/backend/astrolabe/: __init__.py  graph_cache.py  project.py  project_status.py  server.py  unified_storage.py  watcher.py
visualization/backend/astrolabe/models/: __init__.py  edge.py  node.py  state.py
visualization/backend/astrolabe/parsers/: __init__.py  ilean_parser.py
visualization/backend/tests/: test_api_stability.py  test_canvas_api_unified.py  test_canvas_migration.py  test_default_styles.py  test_file_api.py  test_graph_selection.py  test_line_number_accuracy.py  test_models.py  test_reset_all_data.py  test_unified_storage.py  test_unified_storage_canvas.py
visualization/docs/: canvas-meta-migration-plan.md  data-structure-investigation.md
visualization/scripts/: build-backend.sh  chinese_comments.json  translate_comments.py
visualization/src-tauri/: Cargo.toml  tauri.conf.json
visualization/src-tauri/capabilities/: default.json
visualization/src-tauri/icons/: icon.icns
visualization/src-tauri/src/: lib.rs  main.rs
(+85 files in other folders)
