[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astrolabe"
version = "0.1.7"
description = "Astrolabe: your Lean"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Xinze Li" }
]
dependencies = [
    "watchfiles>=0.21",
    "fastapi>=0.109",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["astrolabe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
